# secpipe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  RELEASE_NOTES.md  ROADMAP.md  USAGE.md  docker-compose.yml  hub-config.json  pyproject.toml  test_a2a_wrapper.py
.github/: test-matrix.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  workflow_submission.md
.github/workflows/: ci.yml  docs-deploy.yml  docs-test-deploy.yml  mcp-server.yml  test-workflows.yml
backend/: pyproject.toml  ruff.toml
backend/src/: main.py
backend/tests/: conftest.py
cli/tests/: test_platform_detection.py
docker/: docker-compose.cognee.yml
docker/scripts/: bootstrap_llm_proxy.py
docs/: index.md
docs/blog/: 2025-01-16-v0.7.0-temporal-workers-release.md
fuzzforge-common/: pyproject.toml
fuzzforge-mcp/tests/: test_resources.py
fuzzforge-modules/cargo-fuzzer/: Dockerfile
fuzzforge-modules/crash-analyzer/: Dockerfile
fuzzforge-modules/fuzzforge-module-template/: Dockerfile
fuzzforge-tests/: pyproject.toml
scripts/: cleanup_storage.py  container-env.sh  pyproject-version.sh
sdk/: test_exception_handling.py
secpipe-cli/: pyproject.toml  ruff.toml
secpipe-common/: pyproject.toml
secpipe-mcp/: Dockerfile  README.md  pyproject.toml
secpipe-mcp/src/secpipe_mcp/: __main__.py  application.py  dependencies.py  exceptions.py  settings.py  storage.py
secpipe-mcp/src/secpipe_mcp/resources/: __init__.py  executions.py  project.py
secpipe-mcp/src/secpipe_mcp/tools/: __init__.py  hub.py  projects.py  reports.py
secpipe-mcp/tests/: conftest.py  test_resources.py
secpipe-tests/: pyproject.toml
(+105 files in other folders)
