[project]
name = "secpipe-oss"
version = "0.8.0"
description = "SecPipe AI - AI-driven security research platform for local execution"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "FuzzingLabs", email = "contact@fuzzinglabs.com" }
]
dependencies = [
    "secpipe-cli",
    "secpipe-mcp",
    "secpipe-common",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-httpx==0.36.0",
    "secpipe-tests",
    "secpipe-common",
    "secpipe-mcp",
]

[tool.uv.workspace]
members = [
    "secpipe-common",
    "secpipe-mcp",
    "secpipe-cli",
    "secpipe-tests",
]

[tool.uv.sources]
secpipe-common = { workspace = true }
secpipe-mcp = { workspace = true }
secpipe-cli = { workspace = true }
secpipe-tests = { workspace = true }
